<resources>
    <string name="app_name">ContentProvider</string>
    <string name="title_activity_test">Test</string>
    <string name="notation_inptistes">Notation INPTistes</string>
    <string name="retrouver_notes">Retrouver Notes</string>
    <string name="note_inptiste">Note inptiste</string>
    <string name="note">Note</string>
    <string name="email">Email</string>
    <string name="jour_de_naissance">Jour de naissance</string>
    <string name="telephone">Telephone</string>
    <string name="nom_inptiste">Nom inptiste</string>
    <string name="prenom_inptiste">Prenom inptiste</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="ajouter_note_inptiste">Ajouter note inptiste</string>
</resources>